--- a/experiments/2019-12-23/LSTM_Chem/config.json
+++ b/experiments/2019-12-23/LSTM_Chem/config.json
@@ -1,13 +1,13 @@
 {
     "exp_name": "LSTM_Chem",
-    "data_filename": "./datasets/all_smiles_clean.smi",
+    "data_filename": "/content/data/all_smiles_clean.smi",
     "data_length": 0,
-    "units": 256,
-    "num_epochs": 42,
+    "units": 512,
+    "num_epochs": 3,
     "optimizer": "adam",
-    "seed": 71,
+    "seed": 72,
     "batch_size": 512,
-    "validation_split": 0.1,
+    "validation_split": 0.01,
     "verbose_training": true,
     "checkpoint_monitor": "val_loss",
     "checkpoint_mode": "min",
@@ -20,11 +20,11 @@
     "finetune_epochs": 5,
     "finetune_batch_size": 1,
     "finetune_data_filename": "./datasets/TRPM8_inhibitors_for_fine-tune.smi",
-    "config_file": "experiments/2019-12-23/LSTM_Chem/config.json",
-    "exp_dir": "experiments/2019-12-23/LSTM_Chem/",
-    "tensorboard_log_dir": "experiments/2019-12-23/LSTM_Chem/logs",
-    "checkpoint_dir": "experiments/2019-12-23/LSTM_Chem/checkpoints/",
+    "config_file": "experiments/2021-07-16/LSTM_Chem/config.json",
+    "exp_dir": "experiments/2021-07-16/LSTM_Chem/",
+    "tensorboard_log_dir": "experiments/2021-07-16/LSTM_Chem/logs",
+    "checkpoint_dir": "experiments/2021-07-16/LSTM_Chem/checkpoints/",
     "train_smi_max_len": 128,
-    "model_arch_filename": "experiments/2019-12-23/LSTM_Chem/model_arch.json",
-    "model_weight_filename": "experiments/2019-12-23/LSTM_Chem/checkpoints/LSTM_Chem-baseline-model-full.hdf5"
+    "model_arch_filename": "experiments/2021-07-16/LSTM_Chem/model_arch.json",
+    "model_weight_filename": "experiments/2021-07-16/LSTM_Chem/checkpoints/LSTM_Chem-01-0.19.hdf5"
 }
