--- a/experiments/2021-07-16/LSTM_Chem/config.json
+++ b/experiments/2021-07-16/LSTM_Chem/config.json
@@ -19,12 +19,12 @@
     "smiles_max_length": 128,
     "finetune_epochs": 20,
     "finetune_batch_size": 2048,
-    "finetune_data_filename": "/content/drive/MyDrive/drug_discovery/COVID-19_Drug_Discovery/generations/gen0_smiles.csv",
-    "config_file": "experiments/2021-07-16/LSTM_Chem/config.json",
-    "exp_dir": "experiments/2021-07-16/LSTM_Chem/",
-    "tensorboard_log_dir": "experiments/2021-07-16/LSTM_Chem/logs",
-    "checkpoint_dir": "experiments/2021-07-16/LSTM_Chem/checkpoints/",
+    "finetune_data_filename": "/content/drive/MyDrive/drug_discovery/COVID-19_Drug_Discovery/generations/gen0_smiles.smi",
+    "config_file": "/content/drive/MyDrive/drug_discovery/COVID-19_Drug_Discovery/config.json",
+    "exp_dir": "/content/drive/MyDrive/drug_discovery/COVID-19_Drug_Discovery/",
+    "tensorboard_log_dir": "/content/drive/MyDrive/drug_discovery/COVID-19_Drug_Discovery/logs",
+    "checkpoint_dir": "/content/drive/MyDrive/drug_discovery/COVID-19_Drug_Discovery/checkpoints/",
     "train_smi_max_len": 128,
-    "model_arch_filename": "experiments/2021-07-16/LSTM_Chem/model_arch.json",
-    "model_weight_filename": "experiments/2021-07-16/LSTM_Chem/checkpoints/LSTM_Chem-02-0.17.hdf5"
+    "model_arch_filename": "/content/drive/MyDrive/drug_discovery/COVID-19_Drug_Discovery/model_arch.json",
+    "model_weight_filename": "/content/drive/MyDrive/drug_discovery/COVID-19_Drug_Discovery/checkpoints/LSTM_Chem-02-0.17.hdf5"
 }
